...
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/song_location"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:gravity="center"
                    android:text="None"
                    android:textColor="#ffffff"
                    android:textSize="10dp"
...
                android:id="@+id/previous_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/pause_button"
                app:layout_constraintEnd_toStartOf="@+id/play_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/next_button"
                app:srcCompat="@android:drawable/ic_media_previous" />

            <RelativeLayout
                android:layout_width="55dp"
...
        <!--app:srcCompat="@android:drawable/stat_sys_download" />-->
        <!--</LinearLayout>-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/root_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:paddingTop="10dp">
...
